Finished Intro to Middleware Assignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,4 +32,8 @@ body {
         font-size: 20px;
         color: green;
     }
+
+    &.blue-theme { background-color: #e3f2fd; }
+    &.green-theme { background-color: #e8f5e8; }
+    &.red-theme { background-color: #ffebee; }
 }
