--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,14 +24,16 @@
         </script>
     <% } %>
 </head>
-<body>
+<body class="<%= bodyClass %>">
     <header>
+        <p><%- greeting %></p>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/catalog">Course Catalog</a></li>
                 <li><a href="/products">Products</a></li>
+                <li><a href="/demo">Middleware Demo</a></li>
             </ul>
         </nav>
     </header>
