Completed Intro to PostreSQL Assignment

--- a/src/views/faculty/list.ejs
+++ b/src/views/faculty/list.ejs
@@ -6,7 +6,7 @@
     <div class="faculty-list">
         <% Object.values(facultyList).forEach(facultyMember => { %>
             <div class="faculty-card">
-                <h3><a href="/faculty/<%= facultyMember.id %>"><%= facultyMember.name %></a></h3>
+                <h3><a href="/faculty/<%= facultyMember.slug %>"><%= facultyMember.name %></a></h3>
                 <p class="faculty-department"><%= facultyMember.department %></p>
                 <p class="faculty-title"><%= facultyMember.title %></p>
             </div>
