--- a/src/views/forms/registration/form.ejs
+++ b/src/views/forms/registration/form.ejs
@@ -31,7 +31,7 @@
         <!-- Password confirmation field -->
         <div class="form-group">
             <label for="passwordConfirm">Confirm Password</label>
-            <input type="password" id="passwordConfirm" name="passwordConfirm">
+            <input type="password" id="passwordConfirm" name="passwordConfirm" required>
         </div>
         <!-- Submit button -->
         <button type="submit">Create Account</button>
