--- a/src/views/errors/500.ejs
+++ b/src/views/errors/500.ejs
@@ -4,7 +4,7 @@
     <p>We are experiencing technical difficulties. Our team has been notified and is working to fix the issue.</p>
     <p><a href="/">Return to homepage</a></p>
 
-    <% if (NODE_ENV === 'development') { %> 
+    <% if (true) { %> 
         <details open>
             <summary>Error Details (Development Only)</summary>
             <pre><%= error %></pre>
