Finished Capstone Refactoring Part 1 (made some changes to instructions because I couldn't get it working otherwise).

--- a/src/views/forms/registration/form.ejs
+++ b/src/views/forms/registration/form.ejs
@@ -4,7 +4,7 @@
     <p>
         Register for a new account by providing your information below. All fields are required and passwords must meet security requirements.
     </p>
-    <form method="POST" action="/register" class="registration-form">
+    <form method="POST" action="/register" novalidate class="registration-form">
         <!-- Name field -->
         <div class="form-group">
             <label for="name">Name</label>
